# projet-bawe

./: .gitignore  README.md  build.sh  docker-compose.yml  run-docker.sh  run.sh
backend/: .env  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/auth/: middleware.rs  mod.rs  token_handler.rs
backend/src/forms/: mod.rs  user_forms.rs
backend/src/handlers/: auth_handlers.rs  mod.rs  post_handlers.rs  user_handlers.rs
backend/src/models/: auth.rs  post.rs  user.rs
backend/src/routes/: auth_routes.rs  mod.rs  post_routes.rs  user_routes.rs
database/: 1_reset.sql  2_tables.sql  3_inserts.sql  4_logs.sql  Dockerfile
frontend/: .gitignore  l10n.yaml  pubspec.yaml
frontend/lib/: api.dart  main.dart  models.dart  routes.dart  utils.dart
frontend/lib/api/: auth.dart  posts.dart  users.dart
frontend/lib/auth/: authProvider.dart  tokenHandler.dart
frontend/lib/l10n/: app_en.arb  app_fr.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_fr.dart
frontend/lib/models/: post.dart  user.dart
frontend/lib/pages/: foo.dart
frontend/lib/widgets/: account.dart  app.dart  bar.dart  foo.dart  home.dart  login.dart  navigation.dart  posts.dart  signin.dart  users.dart
frontend/web/: index.html  script.js  style.css
rapport/: rapport.tex
