[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"                                       # Check crates.io for latest version
tokio = { version = "1", features = ["full"] }     # Need the tokio runtime
serde = { version = "1.0", features = ["derive"] } # For JSON serialization
serde_json = "1.0"
