[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"                                       # Check crates.io for latest version
tokio = { version = "1", features = ["full"] }     # Need the tokio runtime
serde = { version = "1.0", features = ["derive"] } # For JSON serialization
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
argon2 = { version = "0.5.3", features = ["rand"] }
